@@ -7,11 +7,12 @@ Standards-Version: 3.9.2
 
 Package: zentyal-antivirus
 Architecture: all
-Depends: zentyal-core (>= 3.2), zentyal-core (<< 3.3), zentyal-network, zentyal-firewall, clamav, clamav-daemon, clamav-freshclam, libdate-calc-perl, libfile-readbackwards-perl, ${misc:Depends}
+Depends: zentyal-core (>= 3.2), zentyal-core (<< 3.3), zentyal-network, zentyal-firewall, clamav, clamav-daemon, clamav-freshclam, libdate-calc-perl, libfile-readbackwards-perl, libclamav-xs-perl, ${misc:Depends}
 Description: Zentyal - Antivirus
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
  Manager, Unified Communications Server or a combination of them. One
  single, easy-to-use platform to manage all your network services.
  .
- This module adds an antivirus scanner server to your Zentyal installation, allowingits use by other eBox services that needs to scan for viruses.
+ This module adds an antivirus scanner server to your Zentyal installation,
+ allowing its use by other Zentyal modules that needs to scan for virus.
