@@ -1,4 +1,5 @@
 HEAD
+	+ Make FreshclamStatus model more resilient to errors
 	+ Fix status when the freshclam state file is empty
 3.2.1
 	+ Update strings to new offering
